Divulgación de convenios (Ventanas modales)

--- a/Backend/api/templates/divulgacion.html
+++ b/Backend/api/templates/divulgacion.html
@@ -18,8 +18,9 @@
     </p>
     <p>Mediante la herramienta de divulgación de convenios le ha sido enviado el siguiente convenio
         que podría ser de interés. </p>
-    <p><b>Nombre convenio: </b>n_convenio</p>
-    <p><b>Entidad: </b>n_entidad</p>
+    <p><b>Tipo convenio: </b>t_convenio</p>
+    <p><b>Descripción: </b>descripcion</p>
+    <p><b>Beneficios: </b>beneficios</p>
     <p>Para más información ingrese a: 
         <a href="https://www.udem.edu.co/index.php/admisiones-convenios-descuentos">Convenios</a> </p>
     </center>
